--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,11 @@
         </dependency>
 
         <!-- 阿里druid连接池依赖 -->
-<!--        <dependency>-->
-<!--            <groupId>com.alibaba</groupId>-->
-<!--            <artifactId>druid</artifactId>-->
-<!--            <version>1.2.18</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.alibaba</groupId>-->
+        <!--            <artifactId>druid</artifactId>-->
+        <!--            <version>1.2.18</version>-->
+        <!--        </dependency>-->
 
         <!-- dbcp连接池依赖 -->
         <dependency>
@@ -80,13 +80,14 @@
             <version>1.6.2</version>
         </dependency>
 
-        <!-- SLF4J API: 提供日志记录接口 -->
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>1.2.11</version>
-        </dependency>
-        <!-- Logback Classic: SLF4J API 的实现 -->
+        <!-- logback基础 提供日志记录接口 -->
+        <!--        <dependency>-->
+        <!--            <groupId>ch.qos.logback</groupId>-->
+        <!--            <artifactId>logback-core</artifactId>-->
+        <!--            <version>1.2.11</version>-->
+        <!--        </dependency>-->
+
+        <!-- logback-classic 包含了 logback-core 和 slf4j-api 依赖 -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -134,6 +135,8 @@
     <build>
         <plugins>
             <!-- 方便打成jar包，直接执行命令： java -jar xxx.jar 即可启动jar包 -->
+            <!-- 配置了一个Maven插件，即maven-assembly-plugin。该插件的版本号为3.3.0，它的作用是将项目打包成一个可执行的JAR文件，
+                    并将所有依赖项打包到JAR文件中。-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -154,23 +157,27 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.3.0</version> <!-- 选择适当的版本 -->
                 <configuration>
-                    <!-- 输出的 JAR 文件的名字 -->
+                    <!-- 输出的 JAR 文件的主类名字 -->
                     <archive>
                         <manifest>
                             <!-- 指定主类，用于执行 JAR 文件 -->
                             <mainClass>com.sixlens.project.webank.app.WebankDataExportApp</mainClass>
                         </manifest>
                     </archive>
+                    <!-- 指定使用哪个打包策略 -->
                     <descriptorRefs>
                         <!-- 使用预定义的 JAR 文件描述符 -->
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                 </configuration>
+
+                <!-- 指定插件的执行方式 -->
                 <executions>
                     <execution>
                         <id>make-assembly</id>
                         <!-- 绑定到 Maven 生命周期的阶段 -->
                         <phase>package</phase>
+                        <!-- 表示只执行一次 -->
                         <goals>
                             <goal>single</goal>
                         </goals>
